--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,30 @@
-language: python
+language: python 
 python: 
- - "3.6.6"
-install:
- - pip install -r requirements.txt
-sudo: required
+- "3.6"
+env: 
+- DJANGO=2.0 DB=postgres
+before_install: 
+- cd decide
+install: 
+- pip install -r ../requirements.txt
+script: 
+- python manage.py test
 services:
- - docker
-script:
- - sonar-scanner
- - cd docker
- - docker exec -ti decide_web ./manage.py test
- - cd ..
+  - postgresql
+before_script:
+ - psql -c "create user decide with password 'decide'" 
+ - psql -c "create database decide owner decide"
+ - python manage.py migrate
+services:
+  - postgresql
 addons:
-  sonarcloud:
-    organization: "pablotabares-github"
-notifications:
-  email: false
-before_install:
- - cd docker
- - docker-compose up -d
- - cd ..
+  postgresql: "9.6"
+global:
+  - PGPORT=5432
+before_script:
+ - psql -c "create user decide with password 'decide'" 
+ - psql -c "create database decide owner decide"
+ - python manage.py migrate
+ - cp local_settings.travis.py local_settings.py
+
 
